fix: login signup page ui fix

--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -30,7 +30,7 @@
 <% } %>
 
 <main>
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+<div class="flex min-h-full flex-col justify-center px-6 pt-44   lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <!-- Logo if wanted -->
     <!-- <div class="text-center font-mono text-3xl font-bold">
@@ -39,12 +39,12 @@
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
   </div>
 
-  <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 shadow-md shadow-gray-700">
+  <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 border border-[#9febf8]">
     <form class="space-y-6" method="post">
       <div>
         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email</label>
         <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="email" required class="border-2 border-gray-500 h-8 block w-full py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <input id="email" name="email" type="email" autocomplete="email" required class="border border-black h-8  w-full py-1.5 text-gray-900">
         </div>
       </div>
 
@@ -54,7 +54,7 @@
 
         </div>
         <div class="mt-2">
-          <input id="password" name="password" type="password" autocomplete="current-password" required class="border-2 border-gray-500 h-8 block w-full bpy-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <input id="password" name="password" type="password" autocomplete="current-password" required class="border border-black h-8  w-full py-1.5 text-gray-900">
         </div>
       </div>
      
