--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -52,10 +52,10 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols lg:w-full gap-6 mt-6 lg:mt-0">
       <a href="/category/Footware" class="relative inline-block overflow-hidden">
-        <img src="https://demo-kalles-4-1.myshopify.com/cdn/shop/files/04_720x_e9fa28ca-2048-4d27-82bf-695916dc2c8b.jpg?v=1652661868&width=600" alt="" class="object-cover w-full h-56 md:h-250px transform hover:scale-110">
+        <img src="https://demo-kalles-4-1.myshopify.com/cdn/shop/files/04_720x_e9fa28ca-2048-4d27-82bf-695916dc2c8b.jpg?v=1652661868&width=600" alt="" class="object-cover w-full h-[30rem] md:h-250px transform hover:scale-110">
       </a>
       <a href="/category/Watch" class="relative inline-block overflow-hidden">
-        <img src="https://www.lip.fr/c/22-category_default/panoramic.jpg" alt="" class="object-cover w-full h-56 md:h-250px transform hover:scale-110">
+        <img src="https://cyrus-watches.ch/storage/collections/KLEPCYS_V_Tourbillon_BLACK_SOLDAT_600x550px_SLIDER.jpg" alt="" class="object-cover w-full h-[30rem] md:h-450px transform hover:scale-110">
       </a>
 
     </div>
@@ -110,12 +110,12 @@
     </div>
 </section>
 
-<section class="text-center mt-5">
+<!-- <section class="text-center mt-5">
     <button class="rounded-full h-10 text-red hover:before:bg-redborder-red-500 relative hover:bg-gray-500 w-40 overflow-hidden border-2 border-gray-500 bg-white px-3 text-gray-500 font-bold shadow-2xl transition-all before:absolute before:bottom-0 before:left-0 before:top-0 before:z-0 before:h-full before:w-0 before:bg-cyan-500 before:transition-all before:duration-500 hover:border-0 hover:text-white hover:shadow-red-500 hover:before:left-0 hover:before:w-full">
         <span class="relative z-10">Load More
         </span>
     </button>
-</section>
+</section> -->
 <br>
     <div class="flex justify-center">
        <hr class="border-gray-600 border-1 w-8/12">
