fix: product bug fix

--- a/src/views/user/product.ejs
+++ b/src/views/user/product.ejs
@@ -198,7 +198,7 @@
     imgs3.addEventListener('click',() => { bigImg.src = image3 });
 
       //<------------ to cart page -------------->
-const addToCartWithQuantity = (productId, userId) => {
+ windowaddToCartWithQuantity = (productId, userId) => {
     const quantitySelect = document.getElementById('quantitySelect');
     const selectedQuantity = parseInt(quantitySelect.value);
     if (!isNaN(selectedQuantity)) { 
