fix: image bug in user profile edit

--- a/src/views/admin/product-list.ejs
+++ b/src/views/admin/product-list.ejs
@@ -46,7 +46,7 @@
                 <!-- <tr class="bg-white border-b dark:border-gray-400 hover:bg-gray-50"> -->
                 <tr class="bg-white hover:bg-gray-50">
                     <th scope="row" class="flex items-center px-4 md:px-6 py-3 md:py-4 text-gray-900 whitespace-nowrap dark:text-white">
-                        <img class="w-8 h-8 md:w-8 md:h-8" src="/product_images/<%= product.productImage[0] %>" alt="Product Image">
+                        <img class="w-8 h-8 md:w-8 md:h-8" src="<%= product.productImage[0] %>" alt="Product Image">
                         <div class="ps-3">
                             <span class="font-medium font-sans text-gray-950"><%= product.productName %></span>
                         </div>
