--- a/src/views/partials/userProfileSidebar.ejs
+++ b/src/views/partials/userProfileSidebar.ejs
@@ -114,7 +114,7 @@
             <div class="flex-1 px-4 space-y-2 overflow-hidden hover:overflow-auto ">
 <div class="w-full max-w-sm bg-white rounded-lg shadow dark:bg-violet-700 dark:border-gray-700">
   <div class="flex flex-col items-center pb-10">
-      <img class="w-12 h-14 mb-3 mt-6   rounded-full shadow-lg" src="/product_images/<%= user.userImage %>" alt="Bonnie image"/>
+      <img class="w-12 h-14 mb-3 mt-6   rounded-full shadow-lg" src="<%= user.userImage %>" alt="Bonnie image"/>
       <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white"><%= user.name %></h5>
       <span class="text-sm text-gray-500 dark:text-gray-400"><%= user.email %></span>
 
