--- a/src/views/admin/product-edit.ejs
+++ b/src/views/admin/product-edit.ejs
@@ -17,15 +17,10 @@
                     <label for="productImage" class="block text-sm font-medium leading-6 text-gray-900">Product Image</label>
                     <div class="mt-2">
                         <input type="file" name="productImage" id="productImage" accept="image/*" multiple class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                        <div id="imagePreview" class="mt-2">
-                            <% if (products[0].productImage) { %>
-                                <% products[0].productImage.forEach(img => { %>
+                        <div id="imagePreview" class="mt-2"> 
                                     <div class="existing-image">
-                                        <img src="/product_images/<%= img %>" alt="Existing Image" class="w-20 h-20 object-cover rounded-md mr-2 mb-2">
-                                        <button class="remove-existing-image text-red-500 hover:text-red-700 cursor-pointer ml-2" onclick="removeExistingImage('<%= img %>')">Remove</button>
-                                      </div>
-                                <% }) %>
-                            <% } %>
+                                        <img src="<%= products[0].productImage[0] %>" class="remove-existing-image w-28 h-28 rounded-lg object-fit text-red-500 hover:text-red-700 cursor-pointer ml-2" onclick="removeExistingImage('<%= products[0].productImage[0] %>')">Remove
+                                      </div> 
                         </div>
                     </div>
                 </div>
@@ -152,7 +147,7 @@ document.addEventListener('DOMContentLoaded', function () {
  
 // Display existing images
 window.onload = function() {
-    const existingImages = "<%- JSON.stringify(products[0].productImage) %>";
+    const existingImages = "<%- JSON.stringify(products[0].productImage[0]) %>";
     if (existingImages) {
         const previewContainer = document.getElementById('imagePreview');
         const images = JSON.parse(existingImages);
@@ -186,16 +181,11 @@ window.onload = function() {
 
   <script>
 
-    
-function removeExistingImage(imageFilename) {
-        // Find the image element with the corresponding filename
-        const imageToRemove = document.querySelector(`img[src$="${imageFilename}"]`);
-        
-        // Remove the image element if found
-        if (imageToRemove) {
-            imageToRemove.parentNode.remove(); // Remove the parent element containing both the image and the button
-        }
-    }
+   function removeExistingImage(imageUrl) {
+    const previewContainer = document.getElementById('imagePreview');
+    previewContainer.innerHTML = '';
+}
+
     </script>
 
 
