--- a/src/views/user/userProfile.ejs
+++ b/src/views/user/userProfile.ejs
@@ -28,7 +28,7 @@
           <div class="flex flex-wrap justify-end">
             <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
               <div class="relative">
-                <img alt="User Image" src="/product_images/<%= user.userImage %>" class="shadow-xl rounded-full h-auto align-middle border-none  -m-16 -ml-20 lg:-ml-16 max-w-150-px">
+                <img alt="User Image" src="<%= user.userImage %>" class="shadow-xl rounded-full h-44 w-44 align-middle border-none m-16 -ml-20 lg:-ml-16 max-w-150-px">
               </div>
             </div>
             <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
