fix: image bug fix for products

--- a/src/views/admin/orderDetailsAdmin.ejs
+++ b/src/views/admin/orderDetailsAdmin.ejs
@@ -9,7 +9,7 @@
                    <% product.forEach( item => { %>
                         <div class="flex flex-col lg:flex-col items-center py-6 gap-6 w-full ">
                     <div class="flex flex-row img-box max-lg:w-full bg-white rounded-lg">
-                        <img src="/product_images/<%= item.productImage[0] %>" alt="product image" 
+                        <img src="<%= item.productImage[0] %>" alt="product image" 
                             class="aspect-square w-full lg:max-w-[140px] mx-8">
                     
                     <div class="flex  items-center w-full ">
