--- a/src/views/admin/product-edit.ejs
+++ b/src/views/admin/product-edit.ejs
@@ -156,7 +156,7 @@ window.onload = function() {
             existingImageContainer.classList.add('existing-image');
 
             const image = document.createElement('img');
-            image.src = '/product_images/' + imageSrc;
+            image.src = 'imageSrc';
             image.alt = 'Existing Image';
             image.classList.add('w-20', 'h-20', 'object-cover', 'rounded-md', 'mr-2', 'mb-2');
 
