--- a/src/views/user/checkout.ejs
+++ b/src/views/user/checkout.ejs
@@ -118,7 +118,7 @@
                                 <% for (let i = 0; i < products.length; i++) { %>
                                     <div class="flex-col space-x-4 mt-4 mb-4">
                                         <div>
-                                            <img src="/product_images/<%= products[i].productImage[0] %>" alt="image" class="w-28 h-32 rounded-xl">
+                                            <img src="<%= products[i].productImage[0] %>" alt="image" class="w-28 h-32 rounded-xl">
                                         </div>
                                         <div class="text-center">
                                             <h2 class="text-md font-bold"><%= products[i].productName %></h2>
