--- a/src/views/user/product.ejs
+++ b/src/views/user/product.ejs
@@ -29,19 +29,19 @@
               <div class="lg:flex lg:items-start">
                 <div class="lg:order-2 lg:ml-5">
                   <div id="container" class="max-w-xl overflow-hidden rounded-lg">
-                    <img id="img-container" class="h-full w-full max-w-full object-cover" src="/product_images/<%- datas[0].productImage[0] %>" alt="big" />
+                    <img id="img-container" class="h-full w-full max-w-full object-cover" src="<%- datas[0].productImage[0] %>" alt="big" />
                   </div>
                 </div>
                 <div class="mt-2 w-full lg:order-1 lg:w-32 lg:flex-shrink-0">
                   <div class="flex flex-row items-start lg:flex-col">
                     <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
-                      <img class="h-full w-full object-cover" id="img-1" src="/product_images/<%- datas[0].productImage[0] %>" alt="" />
+                      <img class="h-full w-full object-cover" id="img-1" src="<%- datas[0].productImage[0] %>" alt="" />
                     </button>
                     <!-- <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
-                      <img class="h-full w-full object-cover" id="img-2" src="/product_images/<%- datas[0].productImage[1] %>" alt="" />
+                      <img class="h-full w-full object-cover" id="img-2" src="<%- datas[0].productImage[1] %>" alt="" />
                     </button>
                     <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
-                      <img class="h-full w-full object-cover" id="img-3" src="/product_images/<%- datas[0].productImage[2] %>" alt="" />
+                      <img class="h-full w-full object-cover" id="img-3" src="<%- datas[0].productImage[2] %>" alt="" />
                     </button> -->
                   </div>
                 </div>
@@ -160,7 +160,7 @@
                       
                       <div class="group relative">
                           <div class="group-hover:scale-110 transition-all duration-300  aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-transparent lg:aspect-none group-hover:opacity-75 lg:h-80">
-                              <img src="/product_images/<%= product.productImage[0] %>">
+                              <img src="<%= product.productImage[0] %>">
                           </div>
                           <div class="mt-4 flex justify-between">
                               <div>
