--- a/src/views/user/search.ejs
+++ b/src/views/user/search.ejs
@@ -50,7 +50,7 @@
                 <% product.forEach( product => { %>
                 <div class="group relative">
                     <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-transparent lg:aspect-none group-hover:opacity-75 lg:h-80">
-                       <a href="#"> <img src="/product_images/<%= product.productImage[0] %>"></a>
+                       <a href="#"> <img src="<%= product.productImage[0] %>"></a>
                     </div>
                     <div class="mt-4 flex justify-between">
                         <div>
