--- a/src/views/user/wishlist.ejs
+++ b/src/views/user/wishlist.ejs
@@ -95,7 +95,7 @@ const removeCart = (productId) => {
                 <% products.forEach( x => { %>
                 <div class="group relative">
                     <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="./product_images/<%= x.productImage[0] %>">
+                        <img src="<%= x.productImage[0] %>">
                     </div>
                     <div class="mt-4 flex justify-between">
                         <div>
