--- a/src/views/user/cart.ejs
+++ b/src/views/user/cart.ejs
@@ -13,7 +13,7 @@
             <div class="flex items-center space-x-4 p-4">
                 <div class="aspect-w-1 aspect-h-1 w-20 h-20 overflow-hidden">
                     <a href="/product/<%= product._id %>">
-                        <img src="./product_images/<%= product.productImage[0] %>" alt="<%= product.productName %>" class="object-cover w-full h-full">
+                        <img src="<%= product.productImage[0] %>" alt="<%= product.productName %>" class="object-cover w-full h-full">
                     </a>
                 </div>
                     <h3 class="text-sm text-gray-700"> <a href="#"> <%= product.productName %> </a> </h3>
