--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -80,8 +80,8 @@
                   <% if (product.extras == 'New Arrivals') { %>
                 <div class="group relative">
                   <div class="relative aspect-h-1 h-[350px] sm:h-[450px] overflow-hidden">
-                    <img src="/product_images/<%= product.productImage[0] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 group-hover:opacity-0"/>
-                    <img src="/product_images/<%= product.productImage[1] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 group-hover:opacity-100"/>
+                    <img src="<%= product.productImage[0] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 group-hover:opacity-0"/>
+                    <img src="<%= product.productImage[1] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 group-hover:opacity-100"/>
                     </div>
                     <div class=" flex justify-between">
                         <div>
@@ -169,8 +169,8 @@
                     <% if (product.extras == 'Trending') { %>
                   <div class="group relative">
                     <div class="relative aspect-h-1 h-[350px] sm:h-[450px] overflow-hidden">
-                      <img src="/product_images/<%= product.productImage[0] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 group-hover:opacity-0" /> 
-                      <img src="/product_images/<%= product.productImage[1] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 group-hover:opacity-100" />
+                      <img src="<%= product.productImage[0] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 group-hover:opacity-0" /> 
+                      <img src="<%= product.productImage[1] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 group-hover:opacity-100" />
                       </div>
                       <div class=" flex justify-between">
                           <div>
@@ -219,8 +219,8 @@
               <div class="group relative">
                 
                 <div class="relative aspect-h-1 h-[350px] sm:h-[450px] overflow-hidden"> 
-                  <img src="/product_images/<%= product.productImage[0] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 group-hover:opacity-0" /> 
-                  <img src="/product_images/<%= product.productImage[1] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 group-hover:opacity-100" />
+                  <img src="<%= product.productImage[0] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 group-hover:opacity-0" /> 
+                  <img src="<%= product.productImage[1] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 group-hover:opacity-100" />
                   </div>
                   <div class=" flex justify-between">
                       <div>
